fix comp whitespace

--- a/competences/style.css
+++ b/competences/style.css
@@ -19,6 +19,7 @@ body {
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
   overflow: hidden;
+  background-color: black;
 }
 
 
@@ -103,13 +104,14 @@ canvas {
   left: 0;
   width: 100%;
   overflow: hidden;
-  z-index: -1;
+  z-index: 1;
+  height: 120%;
 }
 
 .competences {
   position: absolute;
   color: hsl(120, 96%, 63%);
-  z-index: 1;
+  z-index: 2;
   text-shadow: 0 0 7px #00ff00;
 }
 
@@ -191,6 +193,7 @@ canvas {
   transform: translate(-50%, -20vh);
   background-color: #00FF00;
   text-align: center;
+  z-index: 2;
 }
 
 .nextPage:hover {
